k8s/overlays/production/patches/nodeport-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: portfolio
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30800
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: portfolio
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: portfolio
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30300
